[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
once_cell = "1.21.4"
poise = "0.6.2"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5.8"
