[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
cached = "0.59.0"
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
dotenvy = "0.15.7"
once_cell = "1.21.4"
poise = "0.6.2"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabwriter = "1.4.1"
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
